@@ -6,8 +6,9 @@ import by.abram.astore.mapper.ProductMapper;
 import by.abram.astore.repository.ProductRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-
+import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,18 +17,24 @@ public class ProductService {
     private final ProductRepository productRepository;
     private final ProductMapper productMapper;
 
-
+    @Transactional(readOnly = true)
     public List<ProductDto> getAllProducts() {
-        return productRepository.findAll().stream().map(productMapper::toDto).toList();
+        return productRepository.findAll().stream()
+                .map(productMapper::toDto)
+                .collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
     public ProductDto getProductById(Long id) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+                .orElseThrow(() -> new RuntimeException("Product not found: " + id));
         return productMapper.toDto(product);
     }
 
-    public List<ProductDto> getProductsByCategory(String category) {
-        return productRepository.findByCategory(category).stream().map(productMapper::toDto).toList();
+    @Transactional(readOnly = true)
+    public List<ProductDto> getProductsByName(String name) {
+        return productRepository.findByNameContaining(name).stream()
+                .map(productMapper::toDto)
+                .collect(Collectors.toList());
     }
 }
